--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <h1 style="color: chartreuse; text-align: center;"> Credex Technology</h1>
 <div class="app-navigation"></div>
 <h1 style="color: blueviolet; text-align: center;">My first Angular App !!</h1>
+<app-directives></app-directives>
 <app-footer></app-footer>
