--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 
 <h1 style="color: chartreuse; text-align: center;"> Credex Technology</h1>
-<div class="app-navigation"></div>
-<h1 style="color: blueviolet; text-align: center;">My first Angular App !!</h1>
-<app-directives></app-directives>
+<nav>
+    <a class="button" routerLink="/about-us">About-us</a> |
+    <a class="button" routerLink="/contact-us">Contact-us</a> |
+    <a class="button" routerLink="/directives">Directives</a>
+  </nav>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
