--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,5 +2,9 @@ p {
     background-color: blueviolet;
     color: aquamarine;
     text-align: center;
+    margin-top: 36%;
     
+}
+.f1{
+    margin-top: 80px;
 }
