--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,35 @@ div {
     background-color: aquamarine;
     text-align: center;
 }
+.button {
+    box-shadow: inset 0 1px 0 0 #ffffff;
+    background-color: aqua;
+    border-radius: 6px;
+    border: 1px solid #dcdcdc;
+    display: inline-block;
+    cursor: pointer;
+    color: #666666;
+    font-family: Arial, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #ffffff;
+    outline: 0;
+}
+.activebutton {
+    box-shadow: inset 0 1px 0 0 #dcecfb;
+    background-color: #528ecc;
+    border-radius: 6px;
+    border: 1px solid #84bbf3;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #528ecc;
+    outline: 0;
+}
