--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
 <nav>
     <a class="button" routerLink="/about-us">About-us</a> |
     <a class="button" routerLink="/contact-us">Contact-us</a> |
-    <a class="button" routerLink="/directives">Directives</a>
+    <a class="button" routerLink="/directives">Directives</a> |
+    <a class="button" routerLink="/DataFetch">DataFetch</a>
   </nav>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
