--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <a class="button" routerLink="/contact-us">Contact-us</a> |
     <a class="button" routerLink="/directives">Directives</a> |
     <a class="button" routerLink="/DataFetch">DataFetch</a>
+    <a class="button" routerLink="/login-form">LoginForm</a>
   </nav>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
