--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <a class="button" routerLink="/directives">Directives</a> |
     <a class="button" routerLink="/DataFetch">DataFetch</a>
     <a class="button" routerLink="/login-form">LoginForm</a>
+    <a class="button" routerLink="/todo">Todo</a>
   </nav>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
