--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,93 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    height: 100%;
+}
+ul{
+    list-style: none;
+}
+.nav-bar{
+    background-color: burlywood;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.welcome{
+    font-size: 50px;
+    text-align: center;
+    margin-top: 50px;
+}
+
+input{
+    display: block;
+    width: 100%;
+    height: 35px;
+    border: turquoise 2px dashed;
+    margin-bottom: 10px;
+    padding-left: 10px;
+}
+.btn,
+button{
+    display: inline-block;
+    background-color: blueviolet;
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 20px;
+    margin-bottom: 15px;
+    text-align: center;
+    border: none;
+}
+.btn-del{
+    background-color: red;
+}
+.title{
+    padding-left: 15px;
+    font-size: 20px;
+}
+.wrraper{
+    display: flex;
+}
+.left-content{
+    background-color: aquamarine;
+    flex: 3;
+    min-height: 90vh;
+    width: 20px;
+
+
+}
+.right-content{
+    background-color: cadetblue;
+    width: 100px;
+    flex: 3;
+}
+.side-menu{
+    margin-top: 20px;
+}
+.side-menu li{
+ border-bottom: dashed 1px gray;
+}
+label{
+    display: block;
+    font-size: 18px;
+    margin-top: 15px;
+    line-height: 30px;
+}
+form{
+    max-width: 450px;
+    width: 100%;
+    margin: auto;
+}
+table thead th{
+    vertical-align: bottom;
+
+}
+td,th{
+    padding: 0.3rem;
+    border-bottom: 1px solid gainsboro;
+    border-right: 1px solid gainsboro;
+}
