--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
     <a class="button" routerLink="/DataFetch">DataFetch</a>
     <a class="button" routerLink="/login-form">LoginForm</a>
     <a class="button" routerLink="/todoadmin/todolist">Todo</a>
+    <a class="button" routerLink="/pipes">Pipes</a>
+    <a class="button" routerLink="lazy/notes">Lazy Notes</a>
+    <a class="button" routerLink="lazy/print">Lazy Print</a>
   </nav>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
