--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
     <a class="button" routerLink="/pipes">Pipes</a>
     <a class="button" routerLink="lazy/notes">Lazy Notes</a>
     <a class="button" routerLink="lazy/print">Lazy Print</a>
+    <a class="button" routerLink="/login">Login</a>
+    <a class="button" routerLink="/signup">Sign Up</a>
   </nav>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
